2009-11-10 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: check for C++ compiler and C++ bindings to netCDF
 * m4macros/netcdf.m4: implemented check for C++ netCDF bindings
 * utils/Makefile.am: compile new program
 * utils/compare.cpp: add new utility which tests if two netCDF files
   are reasonably identical

2009-11-07 Ian Rutt
 * libglide/glide_thck.F90: More refactoring of thickness calc. Began to
   combine linear and non-linear SIA schemes. Not regtested yet.

2009-11-02 Ian Rutt
 * libglimmer/glimmer_slap.F90: New wrapper for SLAP. 
 * libglide/glide_thck.F90: Changed to using new SLAP wrapper
 * Regtested against e2.a

2009-11-01 Ian Rutt
 * libglide/glide_thckADI.F90: ADI scheme almost finished
 * libglide/glide_thckCommon.F90: New module to hold parts common to ADI
   and 'normal' SIA.
 * Regtested against e2.a and e2.h	

2009-10-31 Ian Rutt
 * libglide/glide_thckADI.F90: More progress on thickness schemes.
 * Regtested against e2.a and e2.h

2009-10-29 Ian Rutt
 * libglide/glide_thckADI.F90: More refactoring of ADI scheme
 * Regtested against e2.a

2009-10-28 Magnus Hagdorn
 * libglide/glide.F90: initialise temperature code with vertical grid
 * libglide/glide_setup.F90: initialise vertical grid
 * libglide/glide_tempFullSoln.F90: take initialised vertical grid and point
   to it in temperature derived type
 * libglide/glide_types.F90: make vertical grid in glide_general a pointer
   and allocate accordingly
 * glimmer_vertcoord.F90: add routines to initialise vertical coord system
   from file or number of sigma levels
 * Precision changes in glimmer_vertcoord.F90 mean retest assume goods
   must be remade.

2009-10-28 Magnus Hagdorn
 * doc/common/packages.tex: add new package
 * doc/dg/Makefile.am: distribute new file
 * doc/dg/dg.tex: document memory handling scheme
 * doc/dg/memory.f90: example program demonstrating memory handling macros
 * libglimmer/Makefile.am: add new file